JBQA-12612 - Added Jacoco plugin for calculating code coverage; Added more tests.